# Rust8080

./: .gitignore  Cargo.toml  README.md
rom/spaceinvaders/: invaders_final.rom
src/: console.rs  constants.rs  lib.rs  main.rs
src/emulator/: iset.rs  mod.rs  utils.rs
src/emulator/arch/: flag.rs  mod.rs  opcodes.rs  state.rs
src/machine/: io.rs  mod.rs  port.rs
src/machine/video/: graphics.rs
src/video/: graphics.rs
