[package]
name = "rust8080"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_engine = "2.6.0"

[profile.dev]
overflow-checks = false

[profile.test]
overflow-checks = false

[profile.bench]
overflow-checks = false

[profile.release]
overflow-checks = false